--- a/index.html
+++ b/index.html
@@ -102,9 +102,22 @@
 									</div>
 								</div> -->
 								<div class="opt">
-									<p>captions</p>
+									<p>Captions</p>
 									<select id="captions">
 										<option value="NA">NA</option>
+									</select>
+								</div>
+								<div class="opt">
+									<p>Playback rate</p>
+									<select id="playback-rate">
+										<option value="0.25">0.25</option>
+										<option value="0.5">0.5</option>
+										<option value="0.75">0.75</option>
+										<option value="1">1</option>
+										<option value="2">1.25</option>
+										<option value="1.5">1.5</option>
+										<option value="1.75">1.75</option>
+										<option value="2">2</option>
 									</select>
 								</div>
 							</div>
